@@ -17,6 +17,9 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+common/object.c: Correct get_search_arr() to return a proper permutation.
+Andreas Kirschbaum 2004-05-18
+
 server/main.c: Have process_events display information from dumped object.
    also, more refinement on checking of object status.
 MSW 2004-05-16
